🚀 Complete ML101 refactoring and cleanup
✨ Major improvements:
- Refactored package structure from algorithms/ to ml101/
- Eliminated code duplication and redundant directories
- Added comprehensive documentation and examples
- Professional package configuration (setup.py, pyproject.toml)
- CI/CD pipeline with GitHub Actions
- Development tools (pre-commit, linting, formatting)
- Clean separation between code and documentation

📦 Package features:
- 10+ classical ML algorithms implemented from scratch
- Linear models: Linear/Logistic/Ridge/Lasso Regression
- Tree-based: Decision Trees, Random Forest
- Distance-based: KNN, K-Means
- Other: SVM, PCA, Naive Bayes
- Comprehensive utilities and metrics
- Working examples and interactive notebooks

🎯 Ready for publication and educational use!

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -19,6 +15,71 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Documentation
+docs/_build/
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Data files
+*.csv
+*.json
+*.pkl
+*.pickle
+*.npy
+*.npz
+*.h5
+*.hdf5
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
 wheels/
 share/python-wheels/
 *.egg-info/
