--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,37 @@
+# Core dependencies
 numpy>=1.21.0
-pandas>=1.3.0
 matplotlib>=3.4.0
-seaborn>=0.11.0
-scikit-learn>=1.0.0
-jupyter>=1.0.0
-pytest>=6.0.0
-plotly>=5.0.0
 scipy>=1.7.0
+
+# Data handling and analysis
+pandas>=1.3.0
+
+# Visualization
+seaborn>=0.11.0
+plotly>=5.0.0
+
+# Development and testing
+pytest>=6.0.0
+pytest-cov>=2.0.0
+black>=22.0.0
+flake8>=4.0.0
+isort>=5.0.0
+mypy>=1.0.0
+pre-commit>=2.0.0
+
+# Jupyter notebooks
+jupyter>=1.0.0
+ipykernel>=6.0.0
+nbconvert>=6.0.0
+
+# Documentation
+sphinx>=4.0.0
+sphinx-rtd-theme>=1.0.0
+myst-parser>=0.18.0
+
+# Build tools
+build>=0.8.0
+twine>=4.0.0
+
+# Comparison benchmarks (optional)
+scikit-learn>=1.0.0
